# DataCode

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  install.sh
docs/: README.md
docs/en/: README.md  builtin_functions.md  classes.md  data_types.md  modules_and_imports.md  string_format.md  table_create_function.md  text_rendering.md  user_functions.md  websocket_server.md
docs/en/database/: README.md
docs/en/internals/: README.md  execution_model.md  globals_and_namespace.md  module_import_system.md  profiling.md  vm_architecture.md
docs/en/ml/: ml_module.md  training_flow.md
docs/en/plot/: README.md
docs/en/settings_env/: README.md
docs/en/uuid/: README.md
docs/ru/: README.md  builtin_functions.md  classes.md  data_types.md  modules_and_imports.md  string_format.md  table_create_function.md  text_rendering.md  user_functions.md  websocket_server.md
docs/ru/internals/: README.md  execution_model.md  globals_and_namespace.md  module_import_system.md  profiling.md  vm_architecture.md
docs/ru/ml/: ml_module.md  training_flow.md
docs/ru/plot/: README.md
docs/ru/settings_env/: README.md
docs/ru/uuid/: README.md
examples/: README.md
examples/en/: README.md
examples/en/01-basics/: README.md  abstract_class.dc  classes.dc  inheritance.dc
examples/en/02-syntax/: README.md
examples/en/03-data-types/: README.md  objects.dc
examples/en/04-advanced/: README.md
examples/en/05-functions/: README.md  typed_functions.dc
examples/en/06-demonstrations/: README.md  showcase.dc
examples/en/07-loops/: README.md
examples/en/09-data-model-creation/: README.md
examples/en/10-plot/: 01-load-image.dc  02-show-image.dc  03-create-window.dc  04-draw-image.dc  05-full-example.dc  06-subplots.dc  07-bar-chart.dc  08-heatmap.dc  09-line-chart.dc  10-pie-chart.dc  README.md
examples/en/12-settings-env/: 01-basic-usage.dc  02-types-and-coercion.dc  03-prefix-and-config.dc  04-field.dc  05-settings-class.dc  06-practical-example.dc  README.md  dev.env  simple.env  with_types.env
examples/en/13-uuid/: 01-basic-usage.dc  02-deterministic-uuid.dc  03-bytes.dc  04-metadata.dc  05-practical-example.dc  README.md
examples/en/14-database/: 01-creat_database.dc  02-cluster-example.dc  README.md
examples/en/14-database-cluster/: 01-cluster-example.dc
examples/en/15-modules/: README.md  main.dc
examples/ru/: README.md
examples/ru/01-основы/: README.md  арифметика.dc  глобальные_локальные.dc  классы.dc  наследование.dc  переменные.dc  привет.dc  строки.dc
examples/ru/02-синтаксис/: README.md  булевы.dc  выражения.dc  условия.dc
examples/ru/03-типы данных/: README.md  объекты.dc  руководство_преобразования_типов.dc  тип_дата.dc  функции_преобразования_типов.dc
examples/ru/04-продвинутые/: README.md  демо_области_видимости.dc  комплексный.dc  обработка_ошибок.dc
examples/ru/05-функции/: README.md  вложенные_функции.dc  простые_функции.dc  рекурсия.dc  типизированные_функции.dc
examples/ru/06-демонстрации/: README.md  демонстрация.dc
examples/ru/07-циклы/: README.md  вложенные_циклы.dc  циклы_for.dc  циклы_while.dc
examples/ru/08-websocket/: file_upload.py  тест_загрузки_данных_smb.dc
examples/ru/09-создание модели данных/: 01-операции_с_файлами.dc  02-объединение_таблиц.dc  03-создание_связей.dc  04-загрузка_квартальных_данных.dc  05-объединения_таблиц.dc  README.md  загрузка_данных_модели.dc
packaging/macos/: README.md  build-app-bundle.sh  datacode-plot.icns
packaging/nginx/: README.md  datacode.conf
scripts/: compare_allocators.sh  profile_cpu.sh  run_performance_profile.sh  setup_profiling.sh
src/: datacode_server_main.rs  dpm_main.rs  lib.rs  main.rs
src/abi/: error.rs  mod.rs  module.rs  value.rs  version.rs  vm_context.rs
src/bytecode/: chunk.rs  function.rs  opcode.rs
src/common/: debug.rs  error.rs  mod.rs  table.rs  tagged_value.rs  value.rs  value_store.rs
src/compiler/: args.rs  closure.rs  compiler.rs  constant_fold.rs  context.rs  labels.rs  mod.rs  natives.rs  scope.rs  unpack.rs
src/dpm/: adapters_lib.rs  add_database.rs  config.rs  env.rs  init_database.rs  init_wizard.rs  install.rs  lock.rs  manifest.rs  mod.rs
src/infra/: cli.rs  gui.rs  http_server.rs  mod.rs  repl.rs  websocket.rs  window_events.rs
src/lexer/: lexer.rs  token.rs
src/parser/: ast.rs  parser.rs
src/semantic/: resolver.rs
src/vm/: abi_bridge.rs  calls.rs  cli.rs  context_guards.rs  dcb.rs  exceptions.rs  executor.rs  file_import.rs  file_ops.rs  frame.rs  global_slot.rs  global_utils.rs  globals.rs  gui.rs  heavy_store.rs  http_server.rs  mod.rs  module_cache.rs  module_object.rs  modules.rs  native_loader.rs  native_registry.rs  natives.rs  operations.rs  profile.rs  repl.rs  run.rs  run_context.rs  stack.rs  store_convert.rs  table_ops.rs  types.rs  vm.rs  websocket.rs  window_events.rs
tests/: array_functions_tests.rs  class_tests.rs  closure_tests.rs  database_engine_tests.rs  dcb_cache_tests.rs  for_unpack_tests.rs  function_type_tests.rs  import_fixtures_tests.rs  import_package_tests.rs  integration_tests.rs  interpolation_tests.rs  interpretation_tests.rs  lexer_tests.rs  line_number_tests.rs  loop_control_tests.rs  main_entry_tests.rs  ml_api_tests.rs  ml_autograd_tests.rs  ml_dataset_tests.rs  ml_graph_tests.rs  ml_layer_tests.rs  ml_linear_regression_tests.rs  ml_loss_tests.rs  ml_neural_network_tests.rs  ml_optimizer_tests.rs  ml_tensor_tests.rs  mnist_mlp_tests.rs  parser_tests.rs  performance_tests.rs  profiling_benchmarks.rs  settings_env_tests.rs  table_tests.rs  try_catch_tests.rs  type_tests.rs  unpack_object_tests.rs  vm_tests.rs
tests/performance_tests/: 100_short_large_dataset_test.dc  10_short_large_dataset_test.dc  50_short_large_dataset_test.dc  large_dataset_test.dc
tests/settings_env_fixtures/: config_like.env  empty.env  not_env_simple.env  quoted.env  required_test.env  simple.env  with_prefix.env
web_helper/datacode_web_docs/: README.md  index.html  script.js  styles.css
web_helper/datacode_web_editor/: README.md  editor.js  example.dc  index.html  styles.css  syntax-highlighter.js
(+200 files in other folders)
