[package]
name = "data-code"
version = "2.1.3"
edition = "2021"
description = "ДатаКод - Interactive Programming Language for fast data processing"
license = "MIT"
authors = ["Igor <igornet0@users.noreply.github.com>"]
repository = "https://github.com/igornet0/DataCode"
keywords = ["programming-language", "interpreter", "repl", "data-processing"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
gpu = ["candle-core", "candle-nn"]
cuda = ["gpu", "candle-core/cuda", "candle-nn/cuda"]
metal = ["gpu", "candle-core/metal", "candle-nn/metal"]

[lib]
name = "data_code"
path = "src/lib.rs"

[[bin]]
name = "datacode"
path = "src/main.rs"

[dependencies]
# Async runtime for WebSocket server
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Date/time utilities
chrono = "0.4.41"

# File format support
csv = "1.3.1"
calamine = "0.28.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket сервер для удаленного выполнения кода
tokio-tungstenite = "0.21"
tungstenite = "0.21"
base64 = "0.22"

# SQLite экспорт для модели данных
rusqlite = { version = "0.30", features = ["bundled"] }

# Plot module dependencies
winit = "0.29"
image = "0.24"
softbuffer = "0.4"
fontdue = "0.7"

# Progress bar for ML training
indicatif = "0.17"

# ndarray for tensor operations
ndarray = "0.15"

# Профилирование и инструментирование (используется в ml_old)
lazy_static = "1.4"

# GPU support for ML (optional)
# Using git version to avoid bf16/f16 rand compatibility issues in published versions
# If git version doesn't work, try: version = "0.3.3"
candle-core = { version = "0.9", default-features = false, optional = true }
candle-nn   = { version = "0.9", default-features = false, optional = true }
