[workspace]
members = ["datacode_abi", "datacode_sdk"]

[package]
name = "data-code"
version = "2.2.1"
edition = "2021"
description = "ДатаКод - Интерактивный язык программирования для быстрой обработки данных"
license = "MIT"
authors = ["Igor <igornet0@users.noreply.github.com>"]
repository = "https://github.com/igornet0/DataCode"
keywords = ["programming-language", "interpreter", "repl", "data-processing"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
gpu = ["candle-core", "candle-nn"]
cuda = ["gpu", "candle-core/cuda", "candle-nn/cuda"]
metal = ["gpu", "candle-core/metal", "candle-nn/metal"]

[lib]
name = "data_code"
path = "src/lib.rs"

[[bin]]
name = "datacode"
path = "src/main.rs"

[[bin]]
name = "dpm"
path = "src/dpm_main.rs"

[[bin]]
name = "datacode-server"
path = "src/datacode_server_main.rs"

[dependencies]
datacode_abi = { path = "datacode_abi" }

# Async runtime for WebSocket server
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Date/time utilities
chrono = "0.4.41"

# File format support
csv = "1.3.1"
calamine = "0.28.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket сервер для удаленного выполнения кода
tokio-tungstenite = "0.21"
tungstenite = "0.21"
base64 = "0.22"

# HTTP server (datacode-server)
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["client", "server", "http1", "tokio"] }
local-ip-address = "0.6"

# SQLite экспорт для модели данных
rusqlite = { version = "0.30", features = ["bundled"] }

# Plot module dependencies
winit = "0.29"
image = "0.24"
softbuffer = "0.4"
fontdue = "0.7"

# Progress bar for ML training
indicatif = "0.17"

# ndarray for tensor operations
ndarray = "0.15"

# Профилирование и инструментирование (используется в ml_old)
lazy_static = "1.4"

# Regular expressions
regex = "1.10"

# UUID (v4, v5, v7, parse, namespaces)
uuid = { version = "1", features = ["v3", "v4", "v5", "v7"] }

# DPM: manifest and config
toml = "0.8"
dirs = "5.0"
dialoguer = "0.11"

# Dynamic native module loading (.so / .dylib)
libloading = "0.8"

# GPU support for ML (optional)
# Using git version to avoid bf16/f16 rand compatibility issues in published versions
# If git version doesn't work, try: version = "0.3.3"
candle-core = { version = "0.9", default-features = false, optional = true }
candle-nn   = { version = "0.9", default-features = false, optional = true }
